syntax = "proto3";
import "server/types.proto";

option go_package = "github.com/gjermundgaraba/pessimistic-validation/proversidecar/server";

package server;

service Proof {
  rpc GetProof(ProofRequest) returns (ProofResponse) {}
}

message ProofRequest {
  string chain_id = 1;
}

message ProofResponse {
  SignedPacketCommitmentsClaim proof = 1;
}


